# ChangeLog for sys-power/pmtools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/pmtools/ChangeLog,v 1.16 2010/12/07 04:19:02 nerdboy Exp $

*pmtools-20101124 (07 Dec 2010)

  07 Dec 2010; Steve Arnold <nerdboy@gentoo.org> +pmtools-20101124.ebuild,
  +files/pmtools-20101124-cflags-ldflags.patch:
  Updated to latest upstream version (new patch courtesy of Fabio Rossi).

*pmtools-20100825 (04 Oct 2010)

  04 Oct 2010; Steve Arnold <nerdboy@gentoo.org> +pmtools-20100825.ebuild:
  Updated to latest upstream release; closes bug 338961.

*pmtools-20100430 (02 May 2010)

  02 May 2010; Robin H. Johnson <robbat2@gentoo.org>
  +pmtools-20100430.ebuild:
  Bug #318213: Version bump.

*pmtools-20100123 (05 Apr 2010)

  05 Apr 2010; Steve Arnold <nerdboy@gentoo.org> +pmtools-20100123.ebuild,
  +files/pmtools-20100123-acpixtract-pmtools.patch,
  +files/pmtools-20100123-cflags-ldflags.patch,
  +files/pmtools-20100123-madt.patch:
  Updated to current release; closes bug 308233.  Thanks to Philipp 
  Nordhus <philipp@tigerclaw.de> for submitting the bug with updated
  patches.  Includes new turbostat tool for Intel CPUs.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> pmtools-20071116.ebuild,
  pmtools-20071116-r1.ebuild:
  Remove virtual/libc

*pmtools-20071116-r1 (16 Aug 2009)

  16 Aug 2009; Steve Arnold <nerdboy@gentoo.org>
  +pmtools-20071116-r1.ebuild, +files/pmtools-20071116-64bit.patch,
  +files/pmtools-20071116-cflags-ldflags.patch:
  Changes in this revision:
	1) updated with build patches (kindly provided by Zeev Tarantov 
	   <zeev.tarantov _at_ gmail.com>, see bug #281567)
	2) updated to EAPI2
	3) removed ppc, since ACPI is really only relevant for x86/amd64

  28 Feb 2009; Steve Arnold <nerdboy@gentoo.org> pmtools-20071116.ebuild:
  Updated to respect user LDFLAGS (see bug #253087), although I don't
  think it matters in this case, at least I get no QA warnings...
