@@ -1,6 +1,15 @@
 # ChangeLog for sys-power/pmtools
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/pmtools/ChangeLog,v 1.16 2010/12/07 04:19:02 nerdboy Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-power/pmtools/ChangeLog,v 1.17 2011/04/03 03:58:56 nerdboy Exp $
+
+*pmtools-20110323 (03 Apr 2011)
+*pmtools-20101221 (03 Apr 2011)
+
+  03 Apr 2011; Steve Arnold <nerdboy@gentoo.org>
+  -pmtools-20071116-r1.ebuild, -pmtools-20101124.ebuild,
+  +pmtools-20101221.ebuild, +pmtools-20110323.ebuild:
+  Removed a couple of stale versions and updated to latest two upstream
+  releases (the only two available).  Closes bug #358319.
 
 *pmtools-20101124 (07 Dec 2010)
 
